--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
              <div id="icon">
               <img src="https://img.icons8.com/?size=100&id=10699&format=png&color=FFFFFF">
              </div>
-         <div class="time four"> <p>روزه</p><strong>۳۰</strong></div>
+         <div class="time "> <p>روزه</p><strong>۳۰</strong></div>
         
          
-         <div class="new-price"><small>تومان</small><strong class="num">۵۹,۰۰۰ </strong></div>
-         <div class="buy"><p>خرید</p></div>
+         <div class="price"><small>تومان</small><strong class="num">۵۹,۰۰۰ </strong></div>
+         <div id="buy-four"><p>خرید</p></div>
           <!--<img src="zar-film/photo_2025-08-03_13-17-25.jpg" />-->
         </div>
       </div>
